manifests/cocktail-sm-api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cocktail-api
  namespace: cocktail-system
  labels:
    app: cocktail-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cocktail-api
  template:
    metadata:
      labels:
        app: cocktail-api
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
      - env:
        - name: CMDB_DRIVER
          value: org.mariadb.jdbc.Driver
        - name: CMDB_URL
          value: jdbc:mariadb://cocktail-cmdb:3306/cocktail?useUnicode=true&charaterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
        - name: CMDB_USER
          value: cocktail
        - name: CMDB_PASSWORD
          value: C0ckt@il
        - name: CLIENT_CALLBACK_PATH
          value: /callback/api/topic
        - name: BUILD_ADD_JOB_URL
          value: /job/BUILD
        - name: BUILD_DELETE_JOB_URL
          value: /job/{job-id}/BUILD
        - name: BUILD_USE_REGISTER
          value: "1"
        - name: REGISTRY_URL
          value: https://cube-hub.acornsoft.io
        - name: REGISTRY_USER
          value: admin
        - name: REGISTRY_PASSWORD
          value: C0ckt@1lAdmin
        - name: BUILD_GET_LATEST_BUILD_IMAGE_URL
          value: /task/{task-id}/latest/images
        - name: BUILD_RUN_BUILD_TASK_URL
          value: /task/{task-id}/BUILD
        - name: CLIENT_HOST
          value: http://cocktail-client-cluster-ip
        - name: BUILDER_HOST
          value: http://cocktail-api:8080/builder
        - name: GCP_BILLING_BUCKET
          value: cc-billing-data
        - name: GCP_BILLING_FILE_PREFIX
          value: cc-billing-
        - name: LOG_LEVEL
          value: INFO
        - name: MONITORING_HOST
          value: http://cocktail-monitoring.monitoring:9004/monitoring-api
        - name: JAVA_OPTIONS
          value: '-server -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap '
        - name: SERVER_TYPE
          value: minic
        - name: DOCKER_URL
          value: https://cube-hub.acornsoft.io
        - name: BUILDER_IMAGE
          value: regi.acornsoft.io/cocktail-common/builder-base-image-master:2.3.0.B000006
        - name: CA_PEM
          value: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlEQnpDQ0FlK2dBd0lCQWdJSkFJVExFS1lrd3phM01BMEdDU3FHU0liM0RRRUJDd1VBTUJveEdEQVdCZ05WDQpCQU1NRDJsd0xURTNNaTB6TVMweE55MDRPREFlRncweE56RXhNekF3TnpNNE5UTmFGdzB5TnpFeE1qZ3dOek00DQpOVE5hTUJveEdEQVdCZ05WQkFNTUQybHdMVEUzTWkwek1TMHhOeTA0T0RDQ0FTSXdEUVlKS29aSWh2Y05BUUVCDQpCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKYStock8zMkYxZTFBWWxlM1pGSUFiR1RSZEx0WVdGUTl3YVlDVDM0aFNODQpTR0hlVkJPZHFGYW5pR2ZBSEFiZU5oVlZRWUZDd25tSUovWUVBdW10dmVENThmMzc5ZXFSdVBVUmx6a21XTkRlDQo4L2M [...]
        - name: CERT_PEM
          value: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlDeERDQ0FheWdBd0lCQWdJQkF6QU5CZ2txaGtpRzl3MEJBUVVGQURBYU1SZ3dGZ1lEVlFRRERBOXBjQzB4DQpOekl0TXpFdE1UY3RPRGd3SGhjTk1UY3hNVE13TURjek9EVXpXaGNOTWpjeE1USTRNRGN6T0RVeldqQVlNUll3DQpGQVlEVlFRRERBMWtiMk5yWlhJdVkyeHBaVzUwTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCDQpDZ0tDQVFFQXlIUnBjK0xJakR3OGwxaFlqejVvV3h1SStjU0t1QnNyU21JSXpGRWZxdDgyVGp1aEJUNDB6UWtVDQpPNGdmeXNtVVdDZ056TFZsV01Hdnc1QW9JUEJNVUFyRVYxKzdDc2VwUFZzQlZFbEJkRDZFanpaNHBwWUdGZlovDQpHVFR [...]
        - name: KEY_PEM
          value: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQ0KTUlJRW93SUJBQUtDQVFFQXlIUnBjK0xJakR3OGwxaFlqejVvV3h1SStjU0t1QnNyU21JSXpGRWZxdDgyVGp1aA0KQlQ0MHpRa1VPNGdmeXNtVVdDZ056TFZsV01Hdnc1QW9JUEJNVUFyRVYxKzdDc2VwUFZzQlZFbEJkRDZFanpaNA0KcHBZR0ZmWi9HVFRhTm1FQitsYi9tNFBJZXFpdFhUVkpjL1JFZGdOc0xzbk04QnExb21iUllCWEx2UnVKeU5RbA0KY2VaanY4WHQwNHgxNWswNlhOcXA3di9YaHdPd1pOTjlvaGJVamVYN29ZZWwvY0F2ZHFsVWlSNzBGY01iWlNxZg0KY0dTUUlLVHRtQ3BQd3Ixck5EcUVsOWlNWnNEWWFsN2EzK0M5ZHNCNk1lZnh6MkIrUmRCRjJhU3NZdTE5dUtBcg0 [...]
        - name: BUILD_DB_URL
          value: jdbc:mariadb://cocktail-cmdb:3306/builder?useUnicode=true&charaterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
        image: regi.acornsoft.io/cocktail-common/cocktail-sm-api-develop:2.3.1.B000183
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /api/check/liveness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 80
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 10
        name: cocktail-api-01
        ports:
        - containerPort: 8080
          name: port-uamx
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/check/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 70
          periodSeconds: 12
          successThreshold: 1
          timeoutSeconds: 10
        securityContext:
          capabilities:
            add:
            - AUDIT_WRITE
            - DAC_OVERRIDE
            - FOWNER
            - FSETID
            - KILL
            - NET_BIND_SERVICE
            - NET_RAW
            - SETGID
            - SETFCAP
            - SETPCAP
            - SETUID
            - SYS_CHROOT
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cocktail-api
  name: cocktail-api
  namespace: cocktail-system
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: cocktail-api
