manifests/prometheus-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    component: prometheus
  name: prometheus-nodeport
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
    nodePort: 30006
  selector:
    app: prometheus
    component: prometheus
  type: NodePort
