manifests/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    component: prometheus
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    component: prometheus
  type: ClusterIP
